# magic-bitboards-demo

./: Cargo.toml  README.md
magic-demo/: Cargo.toml
magic-demo/src/: main.rs
magic-gen/: Cargo.toml
magic-gen/src/: main.rs  rng.rs
types/: Cargo.toml
types/src/: bitboard.rs  lib.rs  square.rs
